fix: wrapping up , completed all backlogs tickets

--- a/src/Authentication/deleteAccount/deleteAcc.scss
+++ b/src/Authentication/deleteAccount/deleteAcc.scss
@@ -1,25 +1,36 @@
 .delete-acc {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
 }
 
 .modal-p {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .modal {
-  &-acc {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 40px;
-    padding: 0 10px;
-  }
-  &-close {
-    display: flex;
-    cursor: pointer;
-    align-items: center;
-    font-size: 26px;
-  }
+    &-acc {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 20px;
+        padding: 0 10px;
+    }
+    &-close {
+        display: flex;
+        cursor: pointer;
+        align-items: center;
+        font-size: 26px;
+    }
+}
+
+.user-img-wrapper {
+    width: 150px;
+    height: 150px;
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 }
