--- a/src/pages/FolderDetails/folderDetail.scss
+++ b/src/pages/FolderDetails/folderDetail.scss
@@ -1,9 +1,12 @@
 .folders-view.folderDetails {
-  & > * {
-    // margin: 0px 8px;
-  }
-  @media (max-width: 600px) {
-    justify-content: space-between;
-    padding: 0 5px;
-  }
+    &>* {
+        margin: 0px 8px;
+        @media (max-width: 767px) {
+            margin: 0px;
+        }
+    }
+    @media (max-width: 600px) {
+        justify-content: space-between;
+        padding: 0 5px;
+    }
 }
